[project]
name = "chatgpt-export"
version = "0.1.0"
description = "Export all ChatGPT conversations as markdown, organized by project folders"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
chatgpt-export = "chatgpt_export.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatgpt_export"]

[tool.pytest.ini_options]
testpaths = ["tests"]
